# notifications-example

./: .env_example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: depends.py  main.py  settings.py
src/alembic/: env.py
src/alembic/versions/: 80ccb591566b_add_subscribers_table.py
src/api/v1/: subscribers.py
src/enums/: events.py
src/events/: handler.py  schemas.py
src/models/: subscribers.py
src/repositories/: abc_repositories.py  subscribers_reposiroties.py
src/schemas/: email.py  subscribers.py
src/service/: email.py  subscribers.py
